fix dropdown overlap bug

--- a/css/main.css
+++ b/css/main.css
@@ -87,9 +87,7 @@ body {
   box-shadow:none;*/
 }
 
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:focus,
-.navbar-default .navbar-nav>.open>a:hover {
+.navbar-default .navbar-nav .open .dropdown-menu > li:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
